--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,50 @@
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+# remove administrative debris (session name, hostname, time) in status bar
+set -g status-left ''
+set -g status-right ''
+
+# act like GNU screen
+unbind C-b
+set -g prefix C-a
+
+# Press C-a Escape to enter copy mode
+bind-key Escape copy-mode 
+
+# Toggle window
+bind-key C-a last-window
+
+# Split vertically using the pipe character
+bind | split-window -h
+
+# Split horizontally using the dash
+unbind s
+bind s split-window -v
+
+# TAB goes to the next window
+bind Tab next-window
+
+# Kill the current window
+bind X kill-window
+
+# Start window numbering at 1 instead of 0
+set -g base-index 1
+
+# Allow faster command sequences
+set -s escape-time 0
+
+# Notify me if other window receives some notification
+setw -g monitor-activity on
+set -g visual-activity on
+
+# Highlight current window
+set-window-option -g window-status-current-bg yellow
+
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+#bind-key -t vi-copy v begin-selection
+#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+#
+## Update default binding of `Enter` to also use copy-pipe
+#unbind -t vi-copy Enter
+#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
