Finished a good version that I can use with vim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,9 +6,6 @@ set -g status-right ''
 unbind C-b
 set -g prefix C-a
 
-# Press C-a Escape to enter copy mode
-bind-key Escape copy-mode 
-
 # Toggle window
 bind-key C-a last-window
 
@@ -35,6 +32,9 @@ set -s escape-time 0
 setw -g monitor-activity on
 set -g visual-activity on
 
+# Avoid bugs
+set-window-option -g utf8 on
+
 # Highlight current window
 set-window-option -g window-status-current-bg yellow
 
@@ -42,9 +42,7 @@ set-window-option -g window-status-current-bg yellow
 setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
-#bind-key -t vi-copy v begin-selection
-#bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-#
-## Update default binding of `Enter` to also use copy-pipe
-#unbind -t vi-copy Enter
-#bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind [ copy-mode
+bind -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe 'xclip -selection clipboard >/dev/null'
+bind ] paste-buffer
