C-S-Arrows now moves a window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,3 +46,7 @@ bind [ copy-mode
 bind -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe 'xclip -selection clipboard >/dev/null'
 bind ] paste-buffer
+
+# Move window with CTRL+SHIFT+Arrows
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
