. Now using TPM (Tmux Package Manager) . Added a plugin: Tmux Yank (it copies things with 'y' to your system clipboard) . Added some lines to avoid bugs with UTF8 . Increased the log bugger to 50000 . Added new key binds to go next/previous window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,26 +2,6 @@
 set -g status-left ''
 set -g status-right ''
 
-# act like GNU screen
-unbind C-b
-set -g prefix C-a
-
-# Toggle window
-bind-key C-a last-window
-
-# Split vertically using the pipe character
-bind | split-window -h
-
-# Split horizontally using the dash
-unbind s
-bind s split-window -v
-
-# TAB goes to the next window
-bind Tab next-window
-
-# Kill the current window
-bind X kill-window
-
 # Start window numbering at 1 instead of 0
 set -g base-index 1
 
@@ -32,14 +12,18 @@ set -s escape-time 0
 setw -g monitor-activity on
 set -g visual-activity on
 
-# Avoid bugs
-set-window-option -g utf8 on
+# UTF8 is on
+set -g utf8 on
+set -g status-utf8 on
 
 # Highlight current window
 set-window-option -g window-status-current-bg yellow
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
+
+# Increase scrollback buffer size
+set -g history-limit 50000
 
 # Setup 'v' to begin selection as in Vim
 bind [ copy-mode
@@ -50,3 +34,36 @@ bind ] paste-buffer
 # Move window with CTRL+SHIFT+Arrows
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
+
+# Easier and faster switching between next/prev window
+bind C-p previous-window
+bind C-n next-window
+
+# act like GNU screen
+unbind C-b
+set -g prefix C-a
+
+# Toggle window
+bind-key C-a last-window
+
+# Split vertically using prefix+|
+bind | split-window -h
+
+# Split horizontally using prefix+s
+unbind s
+bind s split-window -v
+
+# Kill the current window
+bind X kill-window
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
