Indexes are always in sequence now

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,9 @@ set -g status-right ''
 # Start window numbering at 1 instead of 0
 set -g base-index 1
 
+# Always maintains indexes as a sequence
+set-option -g renumber-windows on
+
 # Allow faster command sequences
 set -s escape-time 0
 
