. Updated .tmux.conf for tmux 1.9+ versions .. Creating or splitting the window, set its to the current path you are

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,12 +49,16 @@ set -g prefix C-a
 # Toggle window
 bind-key C-a last-window
 
+# Create new window
+unbind c
+bind c new-window -c "#{pane_current_path}"
+
 # Split vertically using prefix+|
-bind | split-window -h
+bind | split-window -h -c "#{pane_current_path}"
 
 # Split horizontally using prefix+s
 unbind s
-bind s split-window -v
+bind s split-window -v -c "#{pane_current_path}"
 
 # Kill the current window
 bind X kill-window
