. Changed style from style

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,9 @@
 set -g status-left ''
 set -g status-right ''
 
+# Status update interval
+set -g status-interval 1
+
 # Start window numbering at 1 instead of 0
 set -g base-index 1
 
@@ -18,9 +21,6 @@ set -g visual-activity on
 # UTF8 is on
 set -g utf8 on
 set -g status-utf8 on
-
-# Highlight current window
-set-window-option -g window-status-current-bg yellow
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
@@ -62,3 +62,21 @@ bind s split-window -v -c "#{pane_current_path}"
 
 # Kill the current window
 bind X kill-window
+
+############
+# DESIGN
+############
+
+# Basic status bar colors
+set -g status-fg colour240
+set -g status-bg colour233
+
+# Windows status
+set -g window-status-current-format "  #I: #W#F  "
+set -g window-status-format "  #I: #W#F  "
+
+# Window separator
+set -g window-status-separator "|"
+
+# Window status alignment
+set -g status-justify centre
