--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,6 +67,14 @@ bind X kill-window
 # DESIGN
 ############
 
+# Current window status
+set -g window-status-current-bg yellow
+set -g window-status-current-fg colour235
+
+# Window with activity status
+set -g window-status-activity-bg colour75 # fg and bg are flipped here due to
+set -g window-status-activity-fg colour233 # a bug in tmux
+
 # Windows status
 set -g window-status-current-format "  #I: #W#F  "
 set -g window-status-format "  #I: #W#F  "
