--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,9 @@ set -g status-utf8 on
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
+# Enable mouse
+set -g mouse on
+
 # Increase scrollback buffer size
 set -g history-limit 50000
 
