--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,8 +19,8 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # UTF8 is on
-set -g utf8 on
-set -g status-utf8 on
+# set -g utf8 on
+# set -g status-utf8 on
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
@@ -66,6 +66,8 @@ bind X kill-window
 ############
 # DESIGN
 ############
+# Set active window style
+set -g window-active-style 'fg=default,bg=colour233'
 
 # Current window status
 set -g window-status-current-bg yellow
