. Added support to true colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,6 +22,9 @@ set -g visual-activity on
 set -g utf8 on
 set -g status-utf8 on
 
+# Enable True Colors
+set -g default-terminal "screen-256color"
+
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
 
