--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,9 @@ set-option -g renumber-windows on
 # Allow faster command sequences
 set -s escape-time 0
 
+# Activate focus event support
+set -g focus-events on
+
 # Notify me if other window receives some notification
 setw -g monitor-activity on
 set -g visual-activity on
