--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# Use zsh as default
+set-option -g default-shell /usr/bin/zsh
+
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
 set -g status-right ''
