--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,17 +31,14 @@ set -g visual-activity on
 # Enable True Colors
 set -g default-terminal "screen-256color"
 
-# Use vim keybindings in copy mode
-setw -g mode-keys vi
-
 # Increase scrollback buffer size
 set -g history-limit 50000
 
 # Setup 'v' to begin selection as in Vim
-bind [ copy-mode
-bind -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe 'xclip -selection clipboard >/dev/null'
-bind ] paste-buffer
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -selection clipboard >/dev/null"
+bind-key -Tcopy-mode-vi Escape send -X cancel
+bind-key -Tcopy-mode-vi V send -X rectangle-toggle
 
 # Move window with CTRL+SHIFT+Arrows
 bind-key -n C-S-Left swap-window -t -1
