--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,7 +34,11 @@ set -g default-terminal "screen-256color"
 # Increase scrollback buffer size
 set -g history-limit 50000
 
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
 # Setup 'v' to begin selection as in Vim
+bind [ copy-mode
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -selection clipboard >/dev/null"
 bind-key -Tcopy-mode-vi Escape send -X cancel
