--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,9 +40,10 @@ setw -g mode-keys vi
 # Setup 'v' to begin selection as in Vim
 bind [ copy-mode
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'V' send -X select-line
+bind-key -Tcopy-mode-vi 'C-v' send -X rectangle-toggle \; send-keys 'v'
 bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -selection clipboard >/dev/null"
-bind-key -Tcopy-mode-vi Escape send -X cancel
-bind-key -Tcopy-mode-vi V send -X rectangle-toggle
+bind-key -Tcopy-mode-vi Escape send -X clear-selection
 
 # Move window with CTRL+SHIFT+Arrows
 bind-key -n C-S-Left swap-window -t -1
