Disable tab activity notifications

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,8 +21,8 @@ set -s escape-time 0
 set -g focus-events on
 
 # Notify me if other window receives some notification
-setw -g monitor-activity on
-set -g visual-activity on
+# setw -g monitor-activity on
+# set -g visual-activity on
 
 # UTF8 is on
 # set -g utf8 on
