Change hotkey for vertical split to /

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,6 +66,7 @@ bind c new-window -c "#{pane_current_path}"
 
 # Split vertically using prefix+|
 bind | split-window -h -c "#{pane_current_path}"
+bind / split-window -h -c "#{pane_current_path}"
 
 # Split horizontally using prefix+s
 unbind s
