--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,15 +79,13 @@ bind X kill-window
 # DESIGN
 ############
 # Set active window style
-set -g window-active-style 'fg=default,bg=colour232'
+set -g window-active-style "fg=default,bg=colour232"
 
 # Current window status
-set -g window-status-current-bg yellow
-set -g window-status-current-fg colour235
+set -g window-status-current-style "bg=yellow,fg=colour235"
 
 # Window with activity status
-set -g window-status-activity-bg colour75 # fg and bg are flipped here due to
-set -g window-status-activity-fg colour233 # a bug in tmux
+set -g window-status-activity-style "bg=colour75,fg=colour233"
 
 # Windows status
 set -g window-status-current-format "  #I: #W#F  "
