--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,8 +46,8 @@ bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -selection clipb
 bind-key -Tcopy-mode-vi Escape send -X clear-selection
 
 # Move window with CTRL+SHIFT+Arrows
-bind-key -n C-S-Left swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
+bind-key -n C-S-Left swap-window -t -1 \; previous-window
+bind-key -n C-S-Right swap-window -t +1 \; next-window
 
 # Easier and faster switching between next/prev window
 bind C-p previous-window
