fix installation for mac

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # Use zsh as default
-set-option -g default-shell /usr/bin/zsh
+set-option -g default-shell /usr/local/bin/zsh
 
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
