fix a tmux config on iterm2

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,7 @@
 # Use zsh as default
 set-option -g default-shell /usr/local/bin/zsh
+set-option -sa terminal-overrides ',xterm-256color:RGB'
+set-option -ga terminal-overrides ',xterm-256color:Tc'
 
 # remove administrative debris (session name, hostname, time) in status bar
 set -g status-left ''
