Fix swap-window no longer keeping the proper focus, due updates

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,8 +48,8 @@ bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -selection clipb
 bind-key -Tcopy-mode-vi Escape send -X clear-selection
 
 # Move window with CTRL+SHIFT+Arrows
-bind-key -n C-S-Left swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
+bind-key -n C-S-Left swap-window -t -1 -d
+bind-key -n C-S-Right swap-window -t +1 -d
 
 # act like GNU screen
 unbind C-b
