New windows are created after the focused windows, instead of the last position

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,7 +60,7 @@ bind-key C-a last-window
 
 # Create new window
 unbind c
-bind c new-window -c "#{pane_current_path}"
+bind c new-window -a -c "#{pane_current_path}"
 
 # Split vertically using prefix+|
 bind | split-window -h -c "#{pane_current_path}"
