Add a way to restore tmux sessions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -94,3 +94,20 @@ set -g window-status-separator "|"
 
 # Window status alignment
 set -g status-justify centre
+
+# Plugin Manager
+set -g @plugin 'tmux-plugins/tpm'
+# Ctrl-a + I -> To install it
+
+# Plugin for restoring windows/panes of last session
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-save 'S'
+set -g @resurrect-restore 'R'
+
+# Plugin for automatically saving my sessions periodically
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-save-interval '5'  # Every 5 minutes
+set -g @continuum-restore 'on'
+
+# Enables plugin manager
+run '~/.tmux/plugins/tpm/tpm'
