--- a/.tmux.conf
+++ b/.tmux.conf
@@ -103,6 +103,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
+set -g @resurrect-dir '~/.tmux/ressurrect'
+set -g @resurrect-capture-pane-contents 'on'
 
 # Plugin for automatically saving my sessions periodically
 set -g @plugin 'tmux-plugins/tmux-continuum'
