re-enable mouse scroll on tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,6 +22,9 @@ set -s escape-time 0
 # Activate focus event support
 set -g focus-events on
 
+# Enable mouse scroll
+set -g mouse on
+
 # Notify me if other window receives some notification
 # setw -g monitor-activity on
 # set -g visual-activity on
