update config for newer macOS versions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # Use zsh as default
-set-option -g default-shell /usr/local/bin/zsh
+set-option -g default-shell /opt/homebrew/bin/zsh
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 set-option -ga terminal-overrides ',xterm-256color:Tc'
 
@@ -23,7 +23,7 @@ set -s escape-time 0
 set -g focus-events on
 
 # Enable mouse scroll
-set -g mouse on
+# set -g mouse on
 
 # Notify me if other window receives some notification
 # setw -g monitor-activity on
