re-enabling mouse on tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,7 +23,7 @@ set -s escape-time 0
 set -g focus-events on
 
 # Enable mouse scroll
-# set -g mouse on
+set -g mouse on
 
 # Notify me if other window receives some notification
 # setw -g monitor-activity on
