improve mouse behavior

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,9 @@ set -g focus-events on
 
 # Enable mouse scroll
 set -g mouse on
+unbind -T root MouseDrag1Pane
+unbind -T root MouseDown1Pane
+set -g @select-no-scroll 'on'
 
 # Notify me if other window receives some notification
 # setw -g monitor-activity on
@@ -41,14 +44,19 @@ set -g history-limit 50000
 
 # Use vim keybindings in copy mode
 setw -g mode-keys vi
+unbind -T copy-mode-vi MouseDragEnd1Pane
+bind-key -Tcopy-mode-vi MouseDown1Pane send-keys -X clear-selection  # Clear selection on click in visual mode
 
 # Setup 'v' to begin selection as in Vim
 bind [ copy-mode
 bind-key -Tcopy-mode-vi 'v' send -X begin-selection
 bind-key -Tcopy-mode-vi 'V' send -X select-line
 bind-key -Tcopy-mode-vi 'C-v' send -X rectangle-toggle \; send-keys 'v'
-bind-key -Tcopy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -selection clipboard >/dev/null"
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "xclip -selection clipboard >/dev/null"  # Yank without scrolling down
 bind-key -Tcopy-mode-vi Escape send -X clear-selection
+unbind -T copy-mode-vi MouseDragEnd1Pane
+unbind -T copy-mode MouseDragEnd1Pane
+bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-selection
 
 # Move window with CTRL+SHIFT+Arrows
 bind-key -n C-S-Left swap-window -t -1 -d
