another mouse improvement

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,8 @@ set -g focus-events on
 # Enable mouse scroll
 set -g mouse on
 unbind -T root MouseDrag1Pane
-unbind -T root MouseDown1Pane
+bind -T root MouseDown1Pane select-pane  # Re-enable panel selection with mouse click
+unbind -T root MouseDrag1Border  # Disable resizing panes with the mouse
 set -g @select-no-scroll 'on'
 
 # Notify me if other window receives some notification
